View Issue Details

IDProjectCategoryView StatusLast Update
0031429Open CASCADEOCCT:Visualizationpublic2023-08-01 15:09
Reporterkgv Assigned Tovpozdyayev 
PrioritynormalSeverityintegration request 
Status newResolutionopen 
Target VersionUnscheduled 
Summary0031429: Visualization - move out core AIS packages from TKV3d to TKService
DescriptionIt is proposed moving out Graphic3d from TKV3d to dedicated toolkit TKGraphic3d.
Steps To ReproduceN/A
TagsNo tags attached.
Test case number

Relationships

parent of 0031456 closedbugmaster Visualization - move out Dimensions and Relations from package AIS to PrsDims 
child of 0031401 newvpozdyayev Visualization - revise Toolkits dependency graph 

Activities

git

2020-03-14 13:32

administrator   ~0090940

Branch CR31429 has been created by kgv.

SHA-1: 0fa88af529a60f93967850d965dd76d790c7118d


Detailed log of new commits:

Author: kgv
Date: Sat Mar 14 13:32:48 2020 +0300

    0031429: Visualization - move out Graphic3d from TKV3d to dedicated toolkit TKGraphic3d

git

2020-03-20 15:07

administrator   ~0091085

Branch CR31429_1 has been created by kgv.

SHA-1: 748c7d4fd98db36aec98c32ca726d3a626f100d8


Detailed log of new commits:

Author: kgv
Date: Sat Mar 14 13:32:48 2020 +0300

    0031429: Visualization - move out Graphic3d from TKV3d to dedicated toolkit TKGraphic3d
    
    Prs3d::GetDeflection() has been moved to StdPrs_ToolTriangulatedShape::GetDeflection().
    Prs3d_ShapeTool has been moved to StdPrs_ShapeTool.
    Geom_Transformation has been replaced by TopLoc_Datum3D within visualization classes.

abv

2020-03-20 16:45

manager   ~0091086

Last edited: 2020-03-20 16:46

Kirill, what is a benefit of this separation? We have TKService, can it be used as new harbour for that package instead of creating a new toolkit?

kgv

2020-03-20 16:54

developer   ~0091087

The main purpose is making OCCT 3D Viewer base to be independent from B-Rep, meshing tools, HLR algorithm, shape healing etc., so that to be able using it in light-weight environments like web-browser, where additional dependencies make application size unnecessary large.

It is possible moving this from TKV3d to TKService for transparent transition, but it would compromise TKService in applications using only things like Image_AlienPixMap and not TKV3d. But I suppose these are rare cases.

git

2020-03-20 18:15

administrator   ~0091088

Branch CR31429_1 has been updated forcibly by kgv.

SHA-1: d6f4b074695add031e34e9f6dc04aef414093f58

git

2020-03-20 18:25

administrator   ~0091089

Branch CR31429_1 has been updated forcibly by kgv.

SHA-1: ce714a83231cb2e884c5f80232bc8a533151610f

git

2020-03-20 18:32

administrator   ~0091090

Branch CR31429_1 has been updated forcibly by kgv.

SHA-1: 93e2944a43a4838b0625dbbdd311d2ce7efb8d43

git

2020-03-20 18:33

administrator   ~0091091

Branch CR31429_1 has been updated forcibly by kgv.

SHA-1: d22dc11e28f7d35b4b42da3715001ffb6d5ba9c9

git

2020-03-20 18:34

administrator   ~0091092

Branch CR31429_1 has been updated forcibly by kgv.

SHA-1: 42534825fec6833bda04e476cfecf006b82e9644

git

2020-03-20 18:35

administrator   ~0091093

Branch CR31429_1 has been updated forcibly by kgv.

SHA-1: 5b0ac41c92916f6d45bc733e0421e13e67f9bd5b

git

2020-03-20 18:47

administrator   ~0091094

Branch CR31429_1 has been updated forcibly by kgv.

SHA-1: 6a23b173b86920409f878ec22c8d4e0307199298

git

2020-03-20 23:33

administrator   ~0091097

Branch CR31429_1 has been updated forcibly by kgv.

SHA-1: 527f07d00f6b96c53c9c2e691cf21987a81a4f31

git

2020-03-20 23:43

administrator   ~0091100

Branch CR31429_1 has been updated forcibly by kgv.

SHA-1: 7a099dd4ffed70767c0a10545bbfe1551f593055

git

2020-03-21 14:33

administrator   ~0091106

Branch CR31429_1 has been updated by kgv.

SHA-1: b486ada905f3f163ac53a752d5df04054f441137


Detailed log of new commits:

Author: kgv
Date: Sat Mar 21 14:33:26 2020 +0300

    TODO

git

2020-03-21 15:51

administrator   ~0091108

Branch CR31429_2 has been created by kgv.

SHA-1: b15730e949a378920a1a9ff108ae2157864d0312


Detailed log of new commits:

Author: kgv
Date: Sat Mar 14 13:32:48 2020 +0300

    0031429: Visualization - move out Graphic3d from TKV3d to TKService
    
    Prs3d::GetDeflection() has been moved to StdPrs_ToolTriangulatedShape::GetDeflection().
    Prs3d_ShapeTool has been moved to StdPrs_ShapeTool.
    Geom_Transformation has been replaced by TopLoc_Datum3D within visualization classes.
    Select3D_SensitiveCircle constructor now takes gp_Circ instead of Geom_Circle.
    StdPrs_BndBox has been moved to Prs3d_BndBox.
    StdSelect_ViewerSelector3d has been moved to SelectMgr_ViewerSelector3d.
    
    Code collecting free edges on Poly_Triangulation
    has been moved out from StdPrs_WFShape to Prs3d::AddFreeEdges().
    Methods ::GetPoint3d() and ::ArrayBounds() has been moved
    from subclass Select3D_SensitiveCircle to the base class Select3D_SensitiveCurve.
    StdSelect_ViewerSelector3d::computeSensitivePrs() has been moved to
    
    Packages Graphic3d, Prs3d, PrsMgr, V3d, SelectBasics, Select3D, SelectMgr
    have been moved from TKV3d to TKService.
    
    Removed unused declarations StdSelect_Prs, StdSelect_DisplayMode,
    StdSelect_SensitivityMode, StdSelect_TypeOfResult. SelectMgr_SOPtr,
    TColQuantity.

git

2020-03-21 16:30

administrator   ~0091109

Branch CR31429_2 has been updated forcibly by kgv.

SHA-1: 36dcb441aa0d5cf50f3b658293c6127cef322117

git

2020-03-21 22:57

administrator   ~0091118

Branch CR31429_3 has been created by kgv.

SHA-1: 02bd5fe5cb9f0170f07a26ab06075b498674b44c


Detailed log of new commits:

Author: kgv
Date: Sat Mar 14 13:32:48 2020 +0300

    0031429: Visualization - move out Graphic3d from TKV3d to TKService
    
    Prs3d::GetDeflection() has been moved to StdPrs_ToolTriangulatedShape::GetDeflection().
    Prs3d_ShapeTool has been moved to StdPrs_ShapeTool.
    Geom_Transformation has been replaced by TopLoc_Datum3D within visualization classes.
    Select3D_SensitiveCircle constructor now takes gp_Circ instead of Geom_Circle.
    StdPrs_BndBox has been moved to Prs3d_BndBox.
    StdSelect_ViewerSelector3d has been moved to SelectMgr_ViewerSelector3d.
    
    Code collecting free edges on Poly_Triangulation
    has been moved out from StdPrs_WFShape to Prs3d::AddFreeEdges().
    Methods ::GetPoint3d() and ::ArrayBounds() has been moved
    from subclass Select3D_SensitiveCircle to the base class Select3D_SensitiveCurve.
    StdSelect_ViewerSelector3d::computeSensitivePrs() has been moved to
    
    Packages Graphic3d, Prs3d, PrsMgr, V3d, SelectBasics, Select3D, SelectMgr
    have been moved from TKV3d to TKService.
    
    Removed unused declarations StdSelect_Prs, StdSelect_DisplayMode,
    StdSelect_SensitivityMode, StdSelect_TypeOfResult. SelectMgr_SOPtr,
    TColQuantity.

git

2021-03-04 07:16

administrator   ~0099363

Branch CR31429_4 has been created by kgv.

SHA-1: 79f95544556d35f67bd32fe48436f595fe400b77


Detailed log of new commits:

Author: kgv
Date: Sat Mar 14 13:32:48 2020 +0300

    0031429: Visualization - move out Graphic3d from TKV3d to TKService
    
    Packages Graphic3d, Prs3d, PrsMgr, V3d, SelectBasics, Select3D, SelectMgr
    have been moved from TKV3d to TKService.

git

2021-03-04 07:16

administrator   ~0099364

Branch CR31429 has been deleted by kgv.

SHA-1: 0fa88af529a60f93967850d965dd76d790c7118d

git

2021-03-04 07:16

administrator   ~0099365

Branch CR31429_1 has been deleted by kgv.

SHA-1: b486ada905f3f163ac53a752d5df04054f441137

git

2021-03-04 07:17

administrator   ~0099366

Branch CR31429_2 has been deleted by kgv.

SHA-1: 36dcb441aa0d5cf50f3b658293c6127cef322117

git

2021-03-04 07:17

administrator   ~0099367

Branch CR31429_3 has been deleted by kgv.

SHA-1: 02bd5fe5cb9f0170f07a26ab06075b498674b44c

Issue History

Date Modified Username Field Change
2020-03-14 13:31 kgv New Issue
2020-03-14 13:31 kgv Assigned To => kgv
2020-03-14 13:31 kgv Relationship added child of 0031401
2020-03-14 13:32 git Note Added: 0090940
2020-03-20 15:07 git Note Added: 0091085
2020-03-20 16:45 abv Note Added: 0091086
2020-03-20 16:46 abv Note Edited: 0091086
2020-03-20 16:54 kgv Note Added: 0091087
2020-03-20 18:15 git Note Added: 0091088
2020-03-20 18:25 git Note Added: 0091089
2020-03-20 18:32 git Note Added: 0091090
2020-03-20 18:33 git Note Added: 0091091
2020-03-20 18:34 git Note Added: 0091092
2020-03-20 18:35 git Note Added: 0091093
2020-03-20 18:47 git Note Added: 0091094
2020-03-20 23:33 git Note Added: 0091097
2020-03-20 23:43 git Note Added: 0091100
2020-03-21 14:33 git Note Added: 0091106
2020-03-21 15:51 git Note Added: 0091108
2020-03-21 16:30 git Note Added: 0091109
2020-03-21 16:35 kgv Relationship added parent of 0031456
2020-03-21 22:57 git Note Added: 0091118
2020-03-22 13:29 kgv Summary Visualization - move out Graphic3d from TKV3d to dedicated toolkit TKGraphic3d => Visualization - move out AIS from TKV3d to TKService
2020-03-22 13:29 kgv Summary Visualization - move out AIS from TKV3d to TKService => Visualization - move out core AIS packages from TKV3d to TKService
2020-09-21 17:42 kgv Target Version 7.5.0 => 7.6.0
2021-03-04 07:16 git Note Added: 0099363
2021-03-04 07:16 git Note Added: 0099364
2021-03-04 07:16 git Note Added: 0099365
2021-03-04 07:17 git Note Added: 0099366
2021-03-04 07:17 git Note Added: 0099367
2021-09-20 11:08 kgv Target Version 7.6.0 => 7.7.0
2022-08-17 11:55 kgv Target Version 7.7.0 => 7.8.0
2022-10-19 15:49 smoskvin Assigned To kgv => vpozdyayev
2023-08-01 15:09 dpasukhi Target Version 7.8.0 => Unscheduled