0031429: Visualization - move out Graphic3d from TKV3d to TKService

Prs3d::GetDeflection() has been moved to StdPrs_ToolTriangulatedShape::GetDeflection().
Prs3d_ShapeTool has been moved to StdPrs_ShapeTool.
Geom_Transformation has been replaced by TopLoc_Datum3D within visualization classes.
Select3D_SensitiveCircle constructor now takes gp_Circ instead of Geom_Circle.
StdPrs_BndBox has been moved to Prs3d_BndBox.
StdSelect_ViewerSelector3d has been moved to SelectMgr_ViewerSelector3d.

Code collecting free edges on Poly_Triangulation
has been moved out from StdPrs_WFShape to Prs3d::AddFreeEdges().
Methods ::GetPoint3d() and ::ArrayBounds() has been moved
from subclass Select3D_SensitiveCircle to the base class Select3D_SensitiveCurve.
StdSelect_ViewerSelector3d::computeSensitivePrs() has been moved to

Packages Graphic3d, Prs3d, PrsMgr, V3d, SelectBasics, Select3D, SelectMgr
have been moved from TKV3d to TKService.

Removed unused declarations StdSelect_Prs, StdSelect_DisplayMode,
StdSelect_SensitivityMode, StdSelect_TypeOfResult. SelectMgr_SOPtr,
TColQuantity.